syntax = "proto3";
package oraichain.orai.provider;
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/oraichain/orai/x/provider/types";

message OracleScript {
  option (gogoproto.goproto_stringer) = true;
  string name = 1;
  // Owner is the address who is allowed to make further changes to the data source.
  bytes owner = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string description = 3;
  repeated cosmos.base.v1beta1.Coin minimum_fees = 4 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "json:\"minimum_fees\""];
  repeated string d_sources = 5 [(gogoproto.moretags) = "json:\"data_sources\"", (gogoproto.customname) = "DSources"];;
  repeated string t_cases = 6 [(gogoproto.moretags) = "json:\"test_cases\"", (gogoproto.customname) = "TCases"];;
}