syntax = "proto3";
package oraichain.orai.provider;
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/oraichain/orai/x/provider/types";

message TestCase {
  option (gogoproto.goproto_stringer) = true;
  string name = 1;
  // Owner is the address who is allowed to make further changes to the data source.
  bytes owner = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string description = 3;
  repeated cosmos.base.v1beta1.Coin fees = 4 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "json:\"transaction_fee\""];
}